# pif-research-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
src/pif_research_platform/: __init__.py  agents.py  api.py  config.py  exporters.py  models.py  sample_data.py  service.py  storage.py  topic_intelligence.py  utils.py  workflow.py
src/pif_research_platform/adapters/: __init__.py  indicator_values.py  local_llm.py  search.py
src/pif_research_platform/analysis/: __init__.py  generic_topic.py  maharashtra_nowcast.py
tests/: test_exporters.py  test_indicator_values.py  test_platform.py
