[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pif-research-platform"
version = "0.1.0"
description = "Assessment-grade multi-agent research and analysis prototype with local-LLM narrative generation and live literature retrieval."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "langgraph>=1.0.7",
  "pandas>=2.3.3",
  "statsmodels>=0.14.6",
  "openpyxl>=3.1.5",
  "streamlit>=1.55.0",
  "pydantic>=2.12.5",
  "requests>=2.33.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
